<resources>
    <string name="app_name">argFilmQuiz</string>
    <string name="title_activity_level_items">LevelItems</string>
    <string name="back_text">&lt;&lt;</string>
    <string name="forward_text">&gt;&gt;</string>
    <string name="check_button">COMPROBAR</string>
    <string name="frame_imageView_contDesc">Fotograma</string>
    <string name="films_button">PELÍCULAS</string>
    <string name="reset_saved_data_button">BORRAR PROGRESO</string>
    <string name="import_button">IMPORTAR PROGRESO</string>
    <string name="export_button">EXPORTAR PROGRESO</string>
    <string name="creditos">CRÉDITOS</string>
    <string name="ajustes_title">AJUSTES</string>
    <string name="imagen_de_titulo_description">Imagen de título</string>
    <string name="back_name">ATRÁS</string>

    <string name="credits_p1">2018 - Inoro.\n<a href="mailto:iinnoorroo@gmail.com">iinnoorroo@gmail.com</a></string>
    <string name="credits_p2">Este trabajo se encuentra bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL v3.0</a> (o versión posterior).</string>
    <string name="credits_p3"><a href="https://github.com/boot1110001/argFilmQuiz">GitHub</a></string>

    <string name="help_title">AYUDA</string>
    <string name="help_p1">Adivina el título completo de la película basándote en el fotograma mostrado.</string>
    <string name="help_p2">No es necesario introducir ni acentos ni signos de puntuación en la respuesta.</string>
    <string name="help_p3">No importa si la respuesta está en mayúsculas o minúsculas.</string>
    <string name="help_p4">Los niveles suelen tener 30 películas. Es necesario adivinar 20 películas antes de avanzar hacia el siguiente nivel.</string>
    <string name="help_p5">La partida se guarda automáticamente en tu dispositivo, esto quiere decir que si se borran los datos de la app (o la caché) el progreso se perderá.</string>
    <string name="help_p6">Para evitar la pérdida de tu información puedes exportar tu progreso en la sección de "AJUSTES" y guardarla en formato de texto.</string>
    <string name="help_p7">Una vez exportado tu progreso puedes importarlo en cualquier otro dispositivo a través del botón "IMPORTAR PROGRESO" de la sección de "AJUSTES".</string>

</resources>
