<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a22g.argfilmquiz.HelpText"
    android:background="@color/myColorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/level_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="17sp"
                android:text="@string/help_p7"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
