<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a22g.argfilmquiz.LevelItem"
    android:background="@color/myColorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/level_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/level_item_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/frame_imageView_contDesc"
                android:src="@drawable/f0" /><!--android:src="@drawable/f0"-->

            <LinearLayout
                android:id="@+id/level_item_linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/level_item_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="17sp"/>

                <Button
                    android:id="@+id/level_item_btnSubmit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@color/myColorAccent"
                    android:text="@string/check_button"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/level_item_linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp">

            <Button
                android:id="@+id/level_item_btnBack"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myAmarillo"
                android:text="@string/back_name"
                android:textColor="@color/c222"
                android:textSize="17sp"/>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
